footer alignment fix

--- a/css/responsive.css
+++ b/css/responsive.css
@@ -898,7 +898,7 @@
         position: absolute;
         align-self: flex-start;
         left: -165px;
-        top: 130px;
+        top: 170px;
     }
 
 }
